--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ modern.jsonp
 resources/sass/.sass-cache/
 resources/.arch-internal-preview.css
 .arch-internal-preview.css
+/node_modules
+/backend/node_modules
+/frontend/node_modules
