--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.6.8",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "simple-update-notifier": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
